--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-09 17:52-0300\n"
+"PO-Revision-Date: 2023-03-10 13:05+0000\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/tutorial/errors.rst:5
 msgid "Errors and Exceptions"
@@ -288,6 +288,10 @@ msgid ""
 "exceptions that we intend to handle, and to allow any unexpected exceptions "
 "to propagate on."
 msgstr ""
+":exc:`Exception` se puede utilizar como un comodín que atrapa (casi) todo. "
+"Sin embargo, es una buena práctica ser lo más específico posible con los "
+"tipos de excepciones que pretendemos manejar, y permitir que cualquier "
+"excepción inesperada se propague."
 
 #: ../Doc/tutorial/errors.rst:193
 msgid ""
@@ -295,6 +299,9 @@ msgid ""
 "exception and then re-raise it (allowing a caller to handle the exception as "
 "well)::"
 msgstr ""
+"El patrón más común para gestionar :exc:`Exception` es imprimir o registrar "
+"la excepción y luego volver a re-lanzarla (permitiendo a un llamador manejar "
+"la excepción también)::"
 
 #: ../Doc/tutorial/errors.rst:211
 msgid ""
@@ -326,6 +333,10 @@ msgid ""
 "the *try clause*, but also those that occur inside functions that are called "
 "(even indirectly) in the *try clause*. For example::"
 msgstr ""
+"Los gestionadores de excepciones no sólo gestionan excepciones que ocurren "
+"inmediatamente en la *cláusula try*, sino también aquellas que ocurren "
+"dentro de funciones que son llamadas (incluso indirectamente) en la "
+"*cláusula try*. Por ejemplo::"
 
 #: ../Doc/tutorial/errors.rst:248
 msgid "Raising Exceptions"
@@ -374,12 +385,18 @@ msgid ""
 "will have the exception being handled attached to it and included in the "
 "error message::"
 msgstr ""
+"Si se produce una excepción no gestionada dentro de una sección :keyword:"
+"`except`, se le adjuntará la excepción que se está gestionando y se incluirá "
+"en el mensaje de error::"
 
 #: ../Doc/tutorial/errors.rst:306
 msgid ""
 "To indicate that an exception is a direct consequence of another, the :"
 "keyword:`raise` statement allows an optional :keyword:`from<raise>` clause::"
 msgstr ""
+"Para indicar que una excepción es consecuencia directa de otra, la "
+"sentencia :keyword:`raise` permite una cláusula opcional :keyword:"
+"`from<raise>`::"
 
 #: ../Doc/tutorial/errors.rst:312
 msgid "This can be useful when you are transforming exceptions. For example::"
@@ -391,6 +408,8 @@ msgid ""
 "It also allows disabling automatic exception chaining using the ``from "
 "None`` idiom::"
 msgstr ""
+"También permite deshabilitar el encadenamiento automático de excepciones "
+"utilizando el modismo ``from None``::"
 
 #: ../Doc/tutorial/errors.rst:345
 msgid ""
@@ -607,7 +626,7 @@ msgstr ""
 
 #: ../Doc/tutorial/errors.rst:496
 msgid "Raising and Handling Multiple Unrelated Exceptions"
-msgstr ""
+msgstr "Lanzando y Gestionando Múltiples Excepciones no Relacionadas"
 
 #: ../Doc/tutorial/errors.rst:498
 msgid ""
@@ -624,6 +643,9 @@ msgid ""
 "that they can be raised together. It is an exception itself, so it can be "
 "caught like any other exception. ::"
 msgstr ""
+"El incorporado :exc:`ExceptionGroup` envuelve una lista de instancias de "
+"excepción para que puedan ser lanzadas juntas. Es una excepción en sí misma, "
+"por lo que puede capturarse como cualquier otra excepción. ::"
 
 #: ../Doc/tutorial/errors.rst:530
 msgid ""
@@ -641,6 +663,10 @@ msgid ""
 "that have already been raised and caught by the program, along the following "
 "pattern::"
 msgstr ""
+"Tenga en cuenta que las excepciones anidadas en un grupo de excepciones "
+"deben ser instancias, no tipos. Esto se debe a que en la práctica las "
+"excepciones serían típicamente las que ya han sido planteadas y capturadas "
+"por el programa, siguiendo el siguiente patrón::"
 
 #: ../Doc/tutorial/errors.rst:582
 msgid "Enriching Exceptions with Notes"
@@ -663,6 +689,10 @@ msgid ""
 "to add context information for the individual errors. In the following each "
 "exception in the group has a note indicating when this error has occurred. ::"
 msgstr ""
+"Por ejemplo, al recopilar excepciones en un grupo de excepciones, es posible "
+"que queramos añadir información de contexto para los errores individuales. A "
+"continuación, cada excepción del grupo tiene una nota que indica cuándo se "
+"ha producido ese error. ::"
 
 #~ msgid ""
 #~ "All exceptions inherit from :exc:`BaseException`, and so it can be used "
