Traducido el archivo howto/descriptor

--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-30 00:13+0800\n"
+"PO-Revision-Date: 2023-03-10 23:18-0600\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/howto/descriptor.rst:5
 msgid "Descriptor HowTo Guide"
@@ -698,6 +699,10 @@ msgid ""
 "code.  That is why calling :meth:`__getattribute__` directly or with "
 "``super().__getattribute__`` will bypass :meth:`__getattr__` entirely."
 msgstr ""
+"Nota, no hay un gancho :meth:__getattr__ en el código de :meth:"
+"__getattribute__. Es por eso que llamar a :meth:__getattribute__ "
+"directamente o con super().__getattribute__ evitará completamente a :meth:"
+"__getattr__."
 
 #: ../Doc/howto/descriptor.rst:723
 msgid ""
@@ -706,6 +711,10 @@ msgid ""
 "`__getattribute__` raises an :exc:`AttributeError`.  Their logic is "
 "encapsulated in a helper function:"
 msgstr ""
+"En cambio, es el operador punto (.) y la función :func:getattr los que son "
+"responsables de invocar :meth:__getattr__ cada vez que :meth:"
+"__getattribute__ lanza un :exc:AttributeError. Su lógica está encapsulada en "
+"una función auxiliar:"
 
 #: ../Doc/howto/descriptor.rst:773
 msgid "Invocation from a class"
@@ -1277,7 +1286,6 @@ msgstr ""
 "Python de :func:`classmethod` se vería así:"
 
 #: ../Doc/howto/descriptor.rst:1408
-#, fuzzy
 msgid ""
 "The code path for ``hasattr(type(self.f), '__get__')`` was added in Python "
 "3.9 and makes it possible for :func:`classmethod` to support chained "
@@ -1286,7 +1294,7 @@ msgid ""
 msgstr ""
 "La ruta de código para ``hasattr(obj, '__get__')`` fue añadida en Python "
 "3.9, y hace posible que :func:`classmethod` soporte decoradores encadenados."
-"Por ejemplo, un classmethod y un property se puede encadenar:"
+"Por ejemplo, un classmethod y un property se puede encadenar."
 
 #: ../Doc/howto/descriptor.rst:1428
 msgid "Member objects and __slots__"
@@ -1333,7 +1341,7 @@ msgstr ""
 "una gran cantidad de instancias será creada."
 
 #: ../Doc/howto/descriptor.rst:1490
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "4. Improves speed.  Reading instance variables is 35% faster with "
 "``__slots__`` (as measured with Python 3.10 on an Apple M1 processor)."
