arregla palabras pospell

--- a/extending/newtypes.po
+++ b/extending/newtypes.po
@@ -508,11 +508,11 @@ msgid ""
 "handler functions are called, so that if you do need to extend their "
 "functionality, you'll understand what needs to be done."
 msgstr ""
-"Para simplificar, solo la versión :c:expr:`char\\*` será demonstrada aquí; "
-"el tipo del parametro con nombre es la única diferencia entre :c:expr:"
-"`char\\*` y :c:expr:`PyObject*` de la interfaz. Este ejemplo efectivamente "
-"hace lo mismo que el ejemplo genérico anterior, pero no usa el soporte "
-"genérico agregado en Python 2.2. Explica cómo se llaman las funciones del "
+"Para simplificar, solo la versión :c:expr:`char\\*` será demostrada aquí; el "
+"tipo del parámetro con nombre es la única diferencia entre :c:expr:`char\\*` "
+"y :c:expr:`PyObject*` de la interfaz. Este ejemplo efectivamente hace lo "
+"mismo que el ejemplo genérico anterior, pero no usa el soporte genérico "
+"agregado en Python 2.2. Explica cómo se llaman las funciones del "
 "controlador, de modo que si necesita ampliar su funcionalidad, comprenderá "
 "lo que debe hacerse."
 
