Traducido extending/newtypes (#2334)
Closes #1899

--- a/extending/newtypes.po
+++ b/extending/newtypes.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-10-19 20:28-0500\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/extending/newtypes.rst:7
@@ -131,6 +131,8 @@ msgid ""
 "If your type supports garbage collection, the destructor should call :c:func:"
 "`PyObject_GC_UnTrack` before clearing any member fields::"
 msgstr ""
+"Si su tipo admite la recolección de basura, el destructor debe llamar a :c:"
+"func:`PyObject_GC_UnTrack` antes de borrar cualquier campo miembro:"
 
 #: ../Doc/extending/newtypes.rst:95
 msgid ""
@@ -221,15 +223,15 @@ msgstr ""
 "Aquí hay un ejemplo simple::"
 
 #: ../Doc/extending/newtypes.rst:177
-#, fuzzy
 msgid ""
 "If no :c:member:`~PyTypeObject.tp_repr` handler is specified, the "
 "interpreter will supply a representation that uses the type's :c:member:"
 "`~PyTypeObject.tp_name` and a uniquely identifying value for the object."
 msgstr ""
-"Si no se especifica :c:member:`~PyTypeObject.tp_repr`, el intérprete "
-"proporcionará una representación que utiliza los tipos :c:member:"
-"`~PyTypeObject.tp_name` y un valor de identificación único para el objeto."
+"Si no se especifica un controlador :c:member:`~PyTypeObject.tp_repr`, el "
+"intérprete proporcionará una representación que utiliza el :c:member:"
+"`~PyTypeObject.tp_name` del tipo y un valor de identificación exclusivo para "
+"el objeto."
 
 #: ../Doc/extending/newtypes.rst:181
 msgid ""
@@ -274,7 +276,6 @@ msgstr ""
 "el nuevo valor pasado al controlador es ``NULL``."
 
 #: ../Doc/extending/newtypes.rst:208
-#, fuzzy
 msgid ""
 "Python supports two pairs of attribute handlers; a type that supports "
 "attributes only needs to implement the functions for one pair.  The "
@@ -284,12 +285,11 @@ msgid ""
 msgstr ""
 "Python admite dos pares de controladores de atributos; un tipo que admite "
 "atributos solo necesita implementar las funciones para un par. La diferencia "
-"es que un par toma el nombre del atributo como a :c:type:`char\\*`, mientras "
-"que el otro acepta un :c:type:`PyObject\\*`. Cada tipo puede usar el par que "
-"tenga más sentido para la conveniencia de la implementación. ::"
+"es que un par toma el nombre del atributo como :c:expr:`char\\*`, mientras "
+"que el otro acepta un :c:expr:`PyObject*`. Cada tipo puede usar cualquier "
+"par que tenga más sentido para la conveniencia de la implementación. ::"
 
 #: ../Doc/extending/newtypes.rst:220
-#, fuzzy
 msgid ""
 "If accessing attributes of an object is always a simple operation (this will "
 "be explained shortly), there are generic implementations which can be used "
@@ -299,13 +299,13 @@ msgid ""
 "examples which have not been updated to use some of the new generic "
 "mechanism that is available."
 msgstr ""
-"Si acceder a los atributos de un objeto es siempre una operación simple "
+"Si acceder a los atributos de un objeto siempre es una operación simple "
 "(esto se explicará en breve), existen implementaciones genéricas que se "
-"pueden utilizar para proporcionar la versión :c:type:`PyObject\\*` de las "
-"funciones de gestión de atributos. La necesidad real de controladores de "
-"atributos específicos de tipo desapareció casi por completo a partir de "
-"Python 2.2, aunque hay muchos ejemplos que no se han actualizado para "
-"utilizar algunos de los nuevos mecanismos genéricos que están disponibles."
+"pueden usar para proporcionar la versión :c:expr:`PyObject*` de las "
+"funciones de administración de atributos. La necesidad real de controladores "
+"de atributos específicos de tipo desapareció casi por completo a partir de "
+"Python 2.2, aunque hay muchos ejemplos que no se han actualizado para usar "
+"algunos de los nuevos mecanismos genéricos disponibles."
 
 #: ../Doc/extending/newtypes.rst:231
 msgid "Generic Attribute Management"
@@ -499,7 +499,6 @@ msgid "Type-specific Attribute Management"
 msgstr "Gestión de atributos específicos de tipo"
 
 #: ../Doc/extending/newtypes.rst:342
-#, fuzzy
 msgid ""
 "For simplicity, only the :c:expr:`char\\*` version will be demonstrated "
 "here; the type of the name parameter is the only difference between the :c:"
@@ -509,13 +508,13 @@ msgid ""
 "handler functions are called, so that if you do need to extend their "
 "functionality, you'll understand what needs to be done."
 msgstr ""
-"Para simplificar, aquí solo se demostrará la versión :c:type:`char \\*`; el "
-"tipo de parámetro de nombre es la única diferencia entre las variaciones de "
-"la interfaz :c:type:`char\\*` y :c:type:`PyObject\\*`. Este ejemplo "
-"efectivamente hace lo mismo que el ejemplo genérico anterior, pero no "
-"utiliza el soporte genérico agregado en Python 2.2. Explica cómo se llaman "
-"las funciones del controlador, de modo que si necesita ampliar su "
-"funcionalidad, comprenderá lo que debe hacerse."
+"Para simplificar, solo la versión :c:expr:`char\\*` será demostrada aquí; el "
+"tipo del parámetro con nombre es la única diferencia entre :c:expr:`char\\*` "
+"y :c:expr:`PyObject*` de la interfaz. Este ejemplo efectivamente hace lo "
+"mismo que el ejemplo genérico anterior, pero no usa el soporte genérico "
+"agregado en Python 2.2. Explica cómo se llaman las funciones del "
+"controlador, de modo que si necesita ampliar su funcionalidad, comprenderá "
+"lo que debe hacerse."
 
 #: ../Doc/extending/newtypes.rst:350
 msgid ""
@@ -564,7 +563,6 @@ msgstr ""
 "`PyObject_RichCompare` y :c:func:`PyObject_RichCompareBool`."
 
 #: ../Doc/extending/newtypes.rst:395
-#, fuzzy
 msgid ""
 "This function is called with two Python objects and the operator as "
 "arguments, where the operator is one of ``Py_EQ``, ``Py_NE``, ``Py_LE``, "
@@ -574,13 +572,13 @@ msgid ""
 "comparison is not implemented and the other object's comparison method "
 "should be tried, or ``NULL`` if an exception was set."
 msgstr ""
-"Esta función se llama con dos objetos Python y el operador como argumentos, "
-"donde el operador es uno de ``Py_EQ``, ``Py_NE``, ``Py_LE``, ``Py_GT``, "
-"``Py_LT`` o ``Py_GT``. Debe comparar los dos objetos con respecto al "
-"operador especificado y retornar ``Py_True`` o ``Py_False`` si la "
+"Esta función se llama con dos objetos de Python y el operador como "
+"argumentos, donde el operador es uno de ``Py_EQ``, ``Py_NE``, ``Py_LE``, "
+"``Py_GE``, ``Py_LT`` o ``Py_GT``. Debe comparar los dos objetos con respecto "
+"al operador especificado y retornar ``Py_True`` o ``Py_False`` si la "
 "comparación es exitosa, ``Py_NotImplemented`` para indicar que la "
-"comparación no está implementada y el método de comparación del otro objeto "
-"debería intentarse, o ``NULL`` si se estableció una excepción."
+"comparación no está implementada y se debe probar el método de comparación "
+"del otro objeto, o ``NULL`` si se estableció una excepción."
 
 #: ../Doc/extending/newtypes.rst:403
 msgid ""
@@ -825,17 +823,16 @@ msgstr ""
 "hacer dos cosas:"
 
 #: ../Doc/extending/newtypes.rst:575
-#, fuzzy
 msgid ""
 "Include a :c:expr:`PyObject*` field in the C object structure dedicated to "
 "the weak reference mechanism.  The object's constructor should leave it "
 "``NULL`` (which is automatic when using the default :c:member:`~PyTypeObject."
 "tp_alloc`)."
 msgstr ""
-"Incluya el campo a :c:type:`PyObject\\*` en la estructura del objeto C "
-"dedicada al mecanismo de referencia débil. El constructor del objeto debe "
-"dejarlo ``NULL`` (que es automático cuando se usa el valor predeterminado :c:"
-"member:`~PyTypeObject.tp_alloc`)."
+"Incluye un campo :c:expr:`PyObject*` en la estructura del objeto C dedicado "
+"al mecanismo de referencia débil. El constructor del objeto debe dejarlo "
+"como ``NULL`` (que es automático cuando se usa el :c:member:`~PyTypeObject."
+"tp_alloc` predeterminado)."
 
 #: ../Doc/extending/newtypes.rst:580
 msgid ""
@@ -856,10 +853,9 @@ msgstr ""
 "con el campo requerido::"
 
 #: ../Doc/extending/newtypes.rst:592
-#, fuzzy
 msgid "And the corresponding member in the statically declared type object::"
 msgstr ""
-"Y el miembro correspondiente en el objeto de tipo declarado estáticamente::"
+"Y el miembro correspondiente en el objeto de tipo declarado estáticamente:"
 
 #: ../Doc/extending/newtypes.rst:600
 msgid ""
