--- a/howto/isolating-extensions.po
+++ b/howto/isolating-extensions.po
@@ -304,10 +304,10 @@ msgid ""
 "explicit locking."
 msgstr ""
 "En estos casos, el módulo Python debería proporcionar *acceso* al estado "
-"global, en lugar de *poseerlo*. Si es posible, escriba el módulo para que varias "
-"copias del mismo puedan acceder al estado de forma independiente (junto con "
-"otras bibliotecas, ya sea para Python u otros lenguajes). Si eso no es "
-"posible, considere el bloqueo explícito."
+"global, en lugar de *poseerlo*. Si es posible, escriba el módulo para que "
+"varias copias del mismo puedan acceder al estado de forma independiente "
+"(junto con otras bibliotecas, ya sea para Python u otros lenguajes). Si eso "
+"no es posible, considere el bloqueo explícito."
 
 #: ../Doc/howto/isolating-extensions.rst:166
 msgid ""
@@ -566,10 +566,9 @@ msgid ""
 "description or \"blueprint\" of a class, and calling :c:func:"
 "`PyType_FromModuleAndSpec` to construct a new class object."
 msgstr ""
-"Los tipos heap se pueden crear completando una estructura "
-":c:struct:`PyType_Spec`, una descripción o \"modelo\" de una clase y "
-"llamando a :c:func:`PyType_FromModuleAndSpec` para construir un nuevo objeto "
-"de clase."
+"Los tipos heap se pueden crear completando una estructura :c:struct:"
+"`PyType_Spec`, una descripción o \"modelo\" de una clase y llamando a :c:"
+"func:`PyType_FromModuleAndSpec` para construir un nuevo objeto de clase."
 
 #: ../Doc/howto/isolating-extensions.rst:315
 msgid ""
@@ -611,8 +610,8 @@ msgid ""
 "collection protocol. That is, heap types should:"
 msgstr ""
 "Para evitar pérdidas de memoria, las instancias de los tipos heap deben "
-"implementar el protocolo de recolección de elementos no utilizados. Es decir, "
-"los tipos heap deben:"
+"implementar el protocolo de recolección de elementos no utilizados. Es "
+"decir, los tipos heap deben:"
 
 #: ../Doc/howto/isolating-extensions.rst:336
 msgid "Have the :c:data:`Py_TPFLAGS_HAVE_GC` flag."
@@ -700,8 +699,8 @@ msgid ""
 msgstr ""
 "Acceder al estado de nivel de módulo desde los métodos de una clase es algo "
 "más complicado, pero es posible gracias a la API introducida en Python 3.9. "
-"Para obtener el estado, primero debe obtener la *clase de definición* y luego "
-"obtener el estado del módulo."
+"Para obtener el estado, primero debe obtener la *clase de definición* y "
+"luego obtener el estado del módulo."
 
 #: ../Doc/howto/isolating-extensions.rst:388
 msgid ""
@@ -709,9 +708,9 @@ msgid ""
 "that method's \"defining class\" for short. The defining class can have a "
 "reference to the module it is part of."
 msgstr ""
-"El obstáculo más grande es obtener *la clase en la que se definió un método*, "
-"o la \"clase de definición\" de ese método para abreviar. La clase de "
-"definición puede tener una referencia al módulo del que forma parte."
+"El obstáculo más grande es obtener *la clase en la que se definió un "
+"método*, o la \"clase de definición\" de ese método para abreviar. La clase "
+"de definición puede tener una referencia al módulo del que forma parte."
 
 #: ../Doc/howto/isolating-extensions.rst:392
 msgid ""
@@ -769,12 +768,12 @@ msgid ""
 "allow passing in the defining class, unlike with :c:type:`PyCMethod`. The "
 "same goes for getters and setters defined with :c:type:`PyGetSetDef`."
 msgstr ""
-"Los métodos slot, los equivalentes rápidos de C para métodos especiales, como "
-":c:member:`~PyNumberMethods.nb_add` para :py:attr:`~object.__add__` o "
-":c:member:`~PyType.tp_new` para la inicialización, tienen una API muy simple "
-"que no permite pasar la clase de definición, a diferencia de :c:"
-"type:`PyCMethod`. Lo mismo ocurre con los getters y setters definidos con :c:"
-"type:`PyGetSetDef`."
+"Los métodos slot, los equivalentes rápidos de C para métodos especiales, "
+"como :c:member:`~PyNumberMethods.nb_add` para :py:attr:`~object.__add__` o :"
+"c:member:`~PyType.tp_new` para la inicialización, tienen una API muy simple "
+"que no permite pasar la clase de definición, a diferencia de :c:type:"
+"`PyCMethod`. Lo mismo ocurre con los getters y setters definidos con :c:type:"
+"`PyGetSetDef`."
 
 #: ../Doc/howto/isolating-extensions.rst:475
 msgid ""
@@ -882,6 +881,6 @@ msgid ""
 "The heap type API was not designed for \"lossless\" conversion from static "
 "types; that is, creating a type that works exactly like a given static type."
 msgstr ""
-"La API de tipo heap no se diseñó para la conversión \"sin pérdidas\" de tipos "
-"estáticos; es decir, crear un tipo que funcione exactamente como un tipo "
-"estático determinado."
+"La API de tipo heap no se diseñó para la conversión \"sin pérdidas\" de "
+"tipos estáticos; es decir, crear un tipo que funcione exactamente como un "
+"tipo estático determinado."
