Apply suggestions from code review
Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/reference/import.po
+++ b/reference/import.po
@@ -943,7 +943,7 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:494
 msgid "and ``spam/__init__.py`` has the following line in it::"
-msgstr "y ``spam/__init__.py`` tiene la siguiente línea:"
+msgstr "y ``spam/__init__.py`` tiene la siguiente línea::"
 
 #: ../Doc/reference/import.rst:498
 msgid ""
@@ -951,7 +951,7 @@ msgid ""
 "the ``spam`` module::"
 msgstr ""
 "luego, ejecutar los siguientes enlaces de nombres pone ``foo`` y ``Foo`` en "
-"el módulo ``spam``:"
+"el módulo ``spam``::"
 
 #: ../Doc/reference/import.rst:507
 msgid ""
