mantener traducción antigua de entrada 498

--- a/reference/import.po
+++ b/reference/import.po
@@ -950,8 +950,8 @@ msgid ""
 "then executing the following puts name bindings for ``foo`` and ``Foo`` in "
 "the ``spam`` module::"
 msgstr ""
-"luego, ejecutar los siguientes enlaces de nombres pone ``foo`` y ``Foo`` en "
-"el módulo ``spam``::"
+"a continuación, la ejecución de lo siguiente pone un nombre vinculante para "
+"``foo`` y ``Foo`` en el módulo ``spam``::"
 
 #: ../Doc/reference/import.rst:507
 msgid ""
